Bug 392603 - OFX - Mapping Account - Last Update Change causing Update Account greying - Online Settings disappears
Summary: OFX - Mapping Account - Last Update Change causing Update Account greying - O...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 391454 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-04-01 11:25 UTC by Michael Carpino
Modified: 2024-08-17 17:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Carpino 2018-04-01 11:25:11 UTC
After I map an Account OFX import runs just fine and my transactions download properly.  As I don't want to update the last 60 days of transactions again I change the Import details to Last Update.

With this change the Update Account and Update All Accounts turns grey.  

When I go look for at Edit Account > Online Settings the Online Settings tab is gone.

Account still shows as Mapped when you view the Account tab on the toolbar.

Changing the Import Details to Last Update makes downloading of transactions inoperable.
Comment 1 Michael Carpino 2018-04-01 11:57:16 UTC
*** Bug 391454 has been marked as a duplicate of this bug. ***
Comment 2 Michael Carpino 2018-04-01 15:47:34 UTC
If I edit the account and change nothing then click ok the Online Settings tab disappears.  The issue isn't just related to changing the Import details.
Comment 3 Jack 2018-04-01 15:52:56 UTC
1) Investment accounts have always (at least for a long time) downloaded 60 days, whether you say 60 days or as of last download, unless you specify an exact date.  I apparently never filed a bug for this, so I'll have to see if I still have the emails about it.  I'm no longer certain, but I believe the issue is either the actual key/value pair stored for this item, or the way the code handles it if set to "last update."  

2) I suspect that the issue of KMM not remembering/recognizing that the account is actually mapped has been discsussed on the mailing list recently.  I thought there was a bug filed about it but I can't find it now.
Comment 4 Michael Carpino 2018-04-01 16:07:32 UTC
This is more than investment accounts.  Presently I have no mapped accounts and I tried mapping my checking account with a bank and this issue presents itself.
Comment 5 Thomas Baumgart 2018-04-02 08:36:10 UTC
Git commit bd6c509f2b2bef5fed962e751d13e14c68190980 by Thomas Baumgart.
Committed on 02/04/2018 at 08:35.
Pushed by tbaumgart into branch '5.0'.

Keep the OFX importer object name as provider

Using the new plugin structure there is no need to use a fixed name
anymore. Use the objectName() instead and things match.
FIXED-IN: 5.0.2

M  +1    -1    kmymoney/plugins/ofx/import/ofximporter.cpp

https://commits.kde.org/kmymoney/bd6c509f2b2bef5fed962e751d13e14c68190980
Comment 6 Thomas Baumgart 2018-04-02 08:39:22 UTC
Git commit 4480920d5d8627384e5cf1a1396644191e732df5 by Thomas Baumgart.
Committed on 02/04/2018 at 08:39.
Pushed by tbaumgart into branch 'master'.

Keep the OFX importer object name as provider

Using the new plugin structure there is no need to use a fixed name
anymore. Use the objectName() instead and things match.

(cherry picked from commit bd6c509f2b2bef5fed962e751d13e14c68190980)

M  +1    -1    kmymoney/plugins/ofx/import/ofximporter.cpp

https://commits.kde.org/kmymoney/4480920d5d8627384e5cf1a1396644191e732df5
Comment 7 Ralf Habacker 2024-08-17 17:32:30 UTC
Moved to 'general' component