Keep the OFX importer object name as provider

Using the new plugin structure there is no need to use a fixed name
anymore. Use the objectName() instead and things match.

BUG: 392603

(cherry picked from commit bd6c509f2b2bef5fed962e751d13e14c68190980)